--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
     "binary-extensions": "^2.2.0",
+    "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
     "chokidar": "^3.5.3",
